<b>Version 1.31</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Wenn bei betrachtung eines Bildes Autoplay aktiviert wurde, musste man erst das Bild wechseln, bevor die Autoplayfunktion gegriffen hat.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Höhe des Mediencontainers angepasst, damit das Untermenü überdeckt wird.</li>
    <li>[<span style="color: blue">INTERFACE</span>] Ob Autoplay aktiviert ist, wird nun unterhalb des Mediums mittels des Autoplay-Icons angezeigt.</li>
    <li>[<span style="color: red">FEATURE</span>] Vollbildmodus hinzugefügt.</li>
    <li>[OPTIMIERUNG] Hinzufügen und Entfernen von Klassen.</li>
</ul>
<b>Version 1.30</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Selbst erstellte Icons in Einstellungsmenü hinzugefügt</li>
</ul>
<b>Version 1.291</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Timeoutfunktionen bei Bildern werden nun unterbrochen, wenn das Medium manuell gewechselt wird.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Browser springt nun nach Laden des Mediums zurück zur Medien-Navigation-Sprungmarke.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Bildverlinkung bei Autoplay weist nun auf das aktuell angezeigte Bild</li>
</ul>
<b>Version 1.29</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Untermenü bei Einstellungsbutton hinzugefügt mit Autoplayeinstellungen, Feedbackformular, Fehlerbehebung, Lizenzschlüssel und Hilfe</li>
    <li>[<span style="color: red">FEATURE</span>] Lizenzschlüssel zur Verwendung des Feedbackformulars hinzugefügt.</li>
    <li>[<span style="color: red">FEATURE</span>] Feedbackformular hinzugefügt.</li>
</ul>
<b>Version 1.285</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Leerer Vor-/Zurück-Button führte zu Fehler beim Wechseln des Mediums mittels der beiden Buttons.</li>